[gd_scene load_steps=27 format=3 uid="uid://wbaalqedwstv"]

[ext_resource type="Shader" path="res://Data/Satellite/morph.gdshader" id="1_2xbut"]
[ext_resource type="Script" path="res://Data/Satellite/satellite.gd" id="1_w78iv"]
[ext_resource type="Texture2D" uid="uid://ct4n731fbc6cg" path="res://Data/Satellite/Satellite_gold_normal.png" id="3_flxe8"]
[ext_resource type="PackedScene" uid="uid://fly1a14m8ibv" path="res://Data/Satellite/antenna.tscn" id="3_tgdci"]
[ext_resource type="PackedScene" uid="uid://c0nih8qqfqt4c" path="res://Data/Satellite/solar_panel.tscn" id="5_ir1am"]
[ext_resource type="ArrayMesh" uid="uid://w41rqwh1qtsb" path="res://Data/Satellite/SputnikRing.obj" id="6_tqdcm"]
[ext_resource type="PackedScene" uid="uid://dfuymc6rqotx8" path="res://Data/Satellite/hall_thruster_cluster.tscn" id="7_e7vab"]
[ext_resource type="PackedScene" uid="uid://clx04teaxhoo7" path="res://Data/Satellite/DishAntenna.tscn" id="8_m5klc"]
[ext_resource type="Shader" path="res://Data/Satellite/SoundHalo.gdshader" id="9_81ygb"]
[ext_resource type="Script" path="res://Data/Satellite/SoundHalo.gd" id="10_h5erg"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_oe125"]
render_priority = 0
shader = ExtResource("1_2xbut")
shader_parameter/albedo = Color(1, 1, 0, 1)
shader_parameter/point_size = null
shader_parameter/roughness = 0.25
shader_parameter/metallic_texture_channel = Plane(1, 0, 0, 0)
shader_parameter/specular = 0.5
shader_parameter/metallic = 1.0
shader_parameter/normal_scale = 1.0
shader_parameter/uv1_blend_sharpness = 1.0
shader_parameter/uv1_scale = Vector3(4, 4, 4)
shader_parameter/uv1_offset = null
shader_parameter/uv2_scale = Vector3(1, 1, 1)
shader_parameter/uv2_offset = null
shader_parameter/ballRadius = Vector3(0.29, 0.29, 0.29)
shader_parameter/boxExtents = Vector3(1, 1.5, 1)
shader_parameter/morphAmount = 0.0
shader_parameter/texture_normal = ExtResource("3_flxe8")

[sub_resource type="BoxMesh" id="BoxMesh_tmlla"]
material = SubResource("ShaderMaterial_oe125")
subdivide_width = 16
subdivide_height = 16
subdivide_depth = 16

[sub_resource type="Animation" id="Animation_wjyp3"]
resource_name = "Morph"
loop_mode = 2
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainBody:mesh:material:shader_parameter/albedo")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MainBody:mesh:material:shader_parameter/morphAmount")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(2, 0.5, 1),
"update": 0,
"values": [1.0, 0.5, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MainBody:mesh:material:shader_parameter/normal_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MainBody:mesh:material:shader_parameter/roughness")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.25, 0.25]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:useCommonAntennaRodAngle")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:commonAntennaRodAngle")
tracks/5/interp = 1
tracks/5/loop_wrap = false
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(2, 0.5, 1),
"update": 0,
"values": [10.0, 50.0, 90.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".:commonAntennaBaseLocalTranslation")
tracks/6/interp = 1
tracks/6/loop_wrap = false
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(2, 0.5, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.115, 0), Vector3(0, 0.23, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".:antennaBaseAngle")
tracks/7/interp = 1
tracks/7/loop_wrap = false
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(2, 0.5, 1),
"update": 0,
"values": [-10.0, -5.0, 0.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("SputnikRing_Upper:position")
tracks/8/interp = 1
tracks/8/loop_wrap = false
tracks/8/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1.46409, 1),
"update": 0,
"values": [Vector3(0, 0.051503, 0), Vector3(0, 6, 0)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("SputnikRing_Lower:position")
tracks/9/interp = 1
tracks/9/loop_wrap = false
tracks/9/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1.68179, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 5, 0)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("SputnikRing_Upper:rotation")
tracks/10/interp = 1
tracks/10/loop_wrap = false
tracks/10/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1.5708, 0, 0), Vector3(0, 0, 0)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("SputnikRing_Lower:rotation")
tracks/11/interp = 1
tracks/11/loop_wrap = false
tracks/11/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1.10957, 1),
"update": 0,
"values": [Vector3(1.5708, 4.71239, 0), Vector3(3.14159, 1.15192, 0)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("SputnikRing_Upper:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = false
tracks/12/keys = {
"times": PackedFloat32Array(0, 0.99, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, false]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("SputnikRing_Lower:visible")
tracks/13/interp = 1
tracks/13/loop_wrap = false
tracks/13/keys = {
"times": PackedFloat32Array(0, 0.99, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2unsq"]
_data = {
"Morph": SubResource("Animation_wjyp3")
}

[sub_resource type="Animation" id="Animation_7d3r8"]
resource_name = "ExoFramesFlying"
loop_mode = 2
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Frame_Upper:position")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector3(0, 10, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Frame_Upper:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.72, 1),
"transitions": PackedFloat32Array(0.75, 1, 1),
"update": 0,
"values": [Vector3(2.79253, 0, 1.39626), Vector3(0, 0, 0), Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Frame_Lower:position")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector3(0, -10, 0), Vector3(0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Frame_Lower:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.72, 1),
"transitions": PackedFloat32Array(0.75, 1, 1),
"update": 0,
"values": [Vector3(1.39626, 0, 2.79253), Vector3(0, 0, 0), Vector3(0, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Frame_Upper:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.01),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Frame_Lower:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = false
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.01),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eoibu"]
_data = {
"ExoFramesFlying": SubResource("Animation_7d3r8")
}

[sub_resource type="Animation" id="Animation_ym7xp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SolarPanel1:process_mode")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SolarPanel2:process_mode")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SolarPanel3:process_mode")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SolarPanel4:process_mode")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SolarPanel1:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SolarPanel2:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_vauhs"]
resource_name = "SolarPanelConstruction"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("SolarPanel1:constructionFraction")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("SolarPanel2:constructionFraction")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0.0, 1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SolarPanel3:constructionFraction")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SolarPanel4:constructionFraction")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/path = NodePath("SolarPanel1:process_mode")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [4, 0, 4]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = false
tracks/5/path = NodePath("SolarPanel2:process_mode")
tracks/5/interp = 1
tracks/5/loop_wrap = false
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [4, 0, 4]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("SolarPanel3:process_mode")
tracks/6/interp = 1
tracks/6/loop_wrap = false
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.1, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [4, 0, 4]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("SolarPanel4:process_mode")
tracks/7/interp = 1
tracks/7/loop_wrap = false
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.1, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [4, 0, 4]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("SolarPanel1:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = false
tracks/8/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("SolarPanel2:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fwbji"]
_data = {
"RESET": SubResource("Animation_ym7xp"),
"SolarPanelConstruction": SubResource("Animation_vauhs")
}

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yws4a"]
diffuse_mode = 1
metallic = 1.0
roughness = 0.7

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qk8u7"]
metallic = 1.0
roughness = 0.32

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cfwkl"]
render_priority = 0
shader = ExtResource("9_81ygb")
shader_parameter/baseAlbedo = Color(0, 1, 0, 1)
shader_parameter/centerHoleRadius = 0.0
shader_parameter/numOfSamples = 1542747
shader_parameter/soundPos = 163200.0
shader_parameter/soundOffset = 2000.0
shader_parameter/soundLength = -80000.0
shader_parameter/soundPreCut = 0.0
shader_parameter/soundPostCut = 1e+09
shader_parameter/soundAmplification = 2.0

[sub_resource type="PlaneMesh" id="QuadMesh_tscy5"]
size = Vector2(400, 400)
orientation = 2

[sub_resource type="Animation" id="Animation_ue6o3"]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:trigStashToolData")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_s0nrm"]
resource_name = "dummy"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_phptd"]
_data = {
"RESET": SubResource("Animation_ue6o3"),
"dummy": SubResource("Animation_s0nrm")
}

[node name="Satellite" type="Node3D"]
script = ExtResource("1_w78iv")
antennaBaseAngle = -10.0
scopeActive = true

[node name="MainBody" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_tmlla")

[node name="AnimationPlayer_BodyMorph" type="AnimationPlayer" parent="."]
reset_on_save = false
speed_scale = 0.0
libraries = {
"": SubResource("AnimationLibrary_2unsq")
}

[node name="AnimationPlayer_ExoFrames" type="AnimationPlayer" parent="."]
reset_on_save = false
speed_scale = 0.0
libraries = {
"": SubResource("AnimationLibrary_eoibu")
}

[node name="AnimationPlayer_SolarPanel" type="AnimationPlayer" parent="."]
reset_on_save = false
speed_scale = 0.0
libraries = {
"": SubResource("AnimationLibrary_fwbji")
}

[node name="Antenna1" parent="." instance=ExtResource("3_tgdci")]
transform = Transform3D(4.37114e-09, -0.1, -8.74228e-09, -0.1, -4.37114e-09, 0, -3.82137e-16, 8.74228e-09, -0.1, -0.28, -0.11, 0)
antennaRodAngle = 10.0
baseAngle = -10.0
collisionObjectEnabled = false

[node name="Antenna2" parent="." instance=ExtResource("3_tgdci")]
transform = Transform3D(-4.37114e-09, 0.1, 0, -0.1, -4.37114e-09, 0, 0, 0, 0.1, 0.28, -0.11, 0)
antennaRodAngle = 10.0
baseAngle = -10.0
collisionObjectEnabled = false

[node name="Antenna3" parent="." instance=ExtResource("3_tgdci")]
transform = Transform3D(1.91069e-16, -4.37114e-09, 0.1, -0.1, -4.37114e-09, 0, 4.37114e-09, -0.1, -4.37114e-09, 0, -0.11, -0.28)
antennaRodAngle = 10.0
baseAngle = -10.0
collisionObjectEnabled = false

[node name="Antenna4" parent="." instance=ExtResource("3_tgdci")]
transform = Transform3D(1.91069e-16, -4.37114e-09, -0.1, -0.1, -4.37114e-09, 0, -4.37114e-09, 0.1, -4.37114e-09, 0, -0.11, 0.28)
antennaRodAngle = 10.0
baseAngle = -10.0
collisionObjectEnabled = false

[node name="SolarPanel1" parent="." instance=ExtResource("5_ir1am")]
process_mode = 4
transform = Transform3D(-1, 6.12323e-17, 1.06058e-16, 0, 0.866025, -0.5, -1.22465e-16, -0.5, -0.866025, -2.175, -0.192573, -0.350028)
visible = false
columns = 8
flyTime = 0.5
randomSeed = 424242424242
constructionOrigin = Vector3(-1, 0, -0.5)
constructionFraction = 1.0

[node name="SolarPanel2" parent="." instance=ExtResource("5_ir1am")]
process_mode = 4
transform = Transform3D(-1, 6.12323e-17, 1.06058e-16, 0, 0.866025, -0.5, -1.22465e-16, -0.5, -0.866025, -2.175, 0.212976, 0.352169)
visible = false
columns = 8
flyTime = 0.5
flyDirLimits_Min = Vector3(0, 0, -1)
flyDirLimits_Max = Vector3(1, 1, 0)
randomSeed = 1337
constructionOrigin = Vector3(-1, 0, 0.5)
constructionFraction = 1.0

[node name="SolarPanel3" parent="." instance=ExtResource("5_ir1am")]
process_mode = 4
transform = Transform3D(-1, 6.12323e-17, 1.06058e-16, 0, 0.866025, -0.5, -1.22465e-16, -0.5, -0.866025, 2.175, -0.193, -0.35)
columns = 8
flyTime = 0.5
flyDirLimits_Min = Vector3(-1, 0, 0)
flyDirLimits_Max = Vector3(0, 1, 1)
randomSeed = 6502
constructionOrigin = Vector3(1, 0, -0.5)
constructionFraction = 0.0

[node name="SolarPanel4" parent="." instance=ExtResource("5_ir1am")]
process_mode = 4
transform = Transform3D(-1, 6.12323e-17, 1.06058e-16, 0, 0.866025, -0.5, -1.22465e-16, -0.5, -0.866025, 2.175, 0.213, 0.352)
columns = 8
flyTime = 0.5
flyDirLimits_Min = Vector3(-1, 0, -1)
flyDirLimits_Max = Vector3(0, 1, 0)
randomSeed = 68000
constructionOrigin = Vector3(1, 0, 0.5)
constructionFraction = 0.0

[node name="SputnikRing_Upper" type="MeshInstance3D" parent="."]
transform = Transform3D(1.014, 0, 0, 0, -3.67067e-06, -1.014, 0, 1.014, -3.67067e-06, 0, 0.051503, 0)
mesh = ExtResource("6_tqdcm")
surface_material_override/0 = SubResource("StandardMaterial3D_yws4a")

[node name="SputnikRing_Lower" type="MeshInstance3D" parent="."]
transform = Transform3D(9.92626e-07, -1.028, 3.72139e-06, 0, -3.72135e-06, -1.02801, 1.02799, 9.92636e-07, -3.59337e-12, 0, 0, 0)
mesh = ExtResource("6_tqdcm")
surface_material_override/0 = SubResource("StandardMaterial3D_yws4a")

[node name="Frame_Upper" type="Node3D" parent="."]
transform = Transform3D(0.173652, -0.984806, 0, -0.925417, -0.163179, -0.342017, 0.336821, 0.0593917, -0.939694, 0, 10, 0)
visible = false

[node name="CSGCombiner_Frame" type="CSGCombiner3D" parent="Frame_Upper"]
transform = Transform3D(1, 4.20926e-11, -3.63798e-12, 4.29168e-11, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="Base" type="CSGBox3D" parent="Frame_Upper/CSGCombiner_Frame"]
transform = Transform3D(1, 4.20926e-11, -7.27596e-12, 4.29168e-11, 1, 0, 0, 0, 1, -4.65661e-10, 0.375, -9.31323e-10)
size = Vector3(1.01, 0.77, 1.01)
material = SubResource("StandardMaterial3D_qk8u7")

[node name="Cuts" type="CSGCombiner3D" parent="Frame_Upper/CSGCombiner_Frame/Base"]
operation = 2

[node name="VertCut" type="CSGBox3D" parent="Frame_Upper/CSGCombiner_Frame/Base/Cuts"]
transform = Transform3D(1, 4.21778e-11, -2.18279e-11, 4.29168e-11, 1, 5.04871e-29, 0, 0, 1, 3.25963e-09, -0.00999928, -5.58794e-09)
size = Vector3(1, 0.77, 1)

[node name="ZCut" type="CSGBox3D" parent="Frame_Upper/CSGCombiner_Frame/Base/Cuts"]
transform = Transform3D(1, 4.21778e-11, -7.27596e-12, 4.29168e-11, 1, 5.04871e-29, 0, 0, 1, 9.31323e-10, -0.05, -9.31323e-10)
size = Vector3(0.9, 0.77, 1.1)

[node name="XCut" type="CSGBox3D" parent="Frame_Upper/CSGCombiner_Frame/Base/Cuts"]
transform = Transform3D(1, -6.93889e-18, 0, 0, 1, 5.04871e-29, 0, 0, 1, 5.55112e-17, -0.05, 0)
size = Vector3(1.1, 0.77, 0.9)

[node name="UpperHoleCut" type="CSGBox3D" parent="Frame_Upper/CSGCombiner_Frame/Base/Cuts"]
transform = Transform3D(1, -1.17961e-16, 0, 0, 1, 8.58281e-28, 0, 0, 1, -2.69931e-11, 0.370642, 0)
size = Vector3(0.9, 0.1, 0.9)

[node name="HallThrusterCluster" parent="Frame_Upper" instance=ExtResource("7_e7vab")]
transform = Transform3D(0.05, -0.05, -0.0707107, 0.0707107, 0.0707107, -5.55112e-18, 0.05, -0.05, 0.0707107, 0.503, 0.784, 0.503)
maxAcceleration = 0.01
globalSpeedFilterCoeff = 0.01

[node name="HallThrusterCluster2" parent="Frame_Upper" instance=ExtResource("7_e7vab")]
transform = Transform3D(0.05, -0.05, 0.0707107, 0.0707107, 0.0707107, 5.55112e-18, -0.05, 0.05, 0.0707107, 0.503, 0.784, -0.503)
maxAcceleration = 0.01
globalSpeedFilterCoeff = 0.01

[node name="HallThrusterCluster3" parent="Frame_Upper" instance=ExtResource("7_e7vab")]
transform = Transform3D(-0.05, 0.05, 0.0707107, 0.0707107, 0.0707107, 0, -0.05, 0.05, -0.0707107, -0.503, 0.784, -0.503)
maxAcceleration = 0.01
globalSpeedFilterCoeff = 0.01

[node name="HallThrusterCluster4" parent="Frame_Upper" instance=ExtResource("7_e7vab")]
transform = Transform3D(-0.05, 0.05, -0.0707107, 0.0707107, 0.0707107, 0, 0.05, -0.05, -0.0707107, -0.503, 0.784, 0.503)
maxAcceleration = 0.01
globalSpeedFilterCoeff = 0.01

[node name="Frame_Lower" type="Node3D" parent="."]
transform = Transform3D(-0.939694, -0.342017, 0, 0.0593918, -0.163179, -0.984807, 0.336821, -0.925417, 0.173651, 0, -10, 0)
visible = false

[node name="CSGCombiner_Frame" type="CSGCombiner3D" parent="Frame_Lower"]

[node name="Base" type="CSGBox3D" parent="Frame_Lower/CSGCombiner_Frame"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.375, 0)
size = Vector3(1.01, 0.77, 1.01)
material = SubResource("StandardMaterial3D_qk8u7")

[node name="VertCut" type="CSGBox3D" parent="Frame_Lower/CSGCombiner_Frame/Base"]
transform = Transform3D(1, 1.41378e-09, 1.09139e-11, -4.48892e-10, 1, 9.31323e-10, -7.27596e-12, -9.31323e-10, 1, 4.65661e-09, 0.00999963, -9.31323e-10)
operation = 2
size = Vector3(1, 0.77, 1)

[node name="ZCut" type="CSGBox3D" parent="Frame_Lower/CSGCombiner_Frame/Base"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.075, 0)
operation = 2
size = Vector3(0.9, 0.52, 1.1)

[node name="XCut" type="CSGBox3D" parent="Frame_Lower/CSGCombiner_Frame/Base"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.075, 0)
operation = 2
size = Vector3(1.1, 0.52, 0.9)

[node name="DishAntenna" parent="Frame_Lower" instance=ExtResource("8_m5klc")]

[node name="ScopeLight" parent="Frame_Lower/DishAntenna" index="3"]
light_energy = 0.337803

[node name="HallThrusterCluster" parent="Frame_Lower" instance=ExtResource("7_e7vab")]
transform = Transform3D(0.05, -0.05, 0.0707107, -0.0707107, -0.0707107, 0, 0.05, -0.05, -0.0707107, 0.503, -0.784, 0.503)
maxAcceleration = 0.01
globalSpeedFilterCoeff = 0.01

[node name="HallThrusterCluster2" parent="Frame_Lower" instance=ExtResource("7_e7vab")]
transform = Transform3D(0.05, -0.05, -0.0707107, -0.0707107, -0.0707107, 0, -0.05, 0.05, -0.0707107, 0.503, -0.784, -0.503)
maxAcceleration = 0.01
globalSpeedFilterCoeff = 0.01

[node name="HallThrusterCluster3" parent="Frame_Lower" instance=ExtResource("7_e7vab")]
transform = Transform3D(-0.05, 0.05, -0.0707107, -0.0707107, -0.0707107, 0, -0.05, 0.05, 0.0707107, -0.503, -0.784, -0.503)
maxAcceleration = 0.01
globalSpeedFilterCoeff = 0.01

[node name="HallThrusterCluster4" parent="Frame_Lower" instance=ExtResource("7_e7vab")]
transform = Transform3D(-0.05, 0.05, 0.0707107, -0.0707107, -0.0707107, 0, 0.05, -0.05, 0.0707107, -0.503, -0.784, 0.503)
maxAcceleration = 0.01
globalSpeedFilterCoeff = 0.01

[node name="SoundHalo" type="MeshInstance3D" parent="."]
material_override = SubResource("ShaderMaterial_cfwkl")
mesh = SubResource("QuadMesh_tscy5")
script = ExtResource("10_h5erg")

[node name="AnimationPlayer_ToolDataStasher" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_phptd")
}

[editable path="Frame_Lower/DishAntenna"]
